[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/godot-openvr/OpenVRAction.gdns" type="Script" id=1]
[ext_resource path="res://addons/vr-toolkit/Controller/Hand/Gestures.gd" type="Script" id=2]
[ext_resource path="res://addons/vr-toolkit/Controller/Hand/HandDefault.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/vr-toolkit/Gui/GuiFinger.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "0"
length = 0.833333
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature/Skeleton:thumb_3")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0.4, 1, 2.6077e-08, 5.96046e-08, 0, 0.254335, -0.0372831, 0.043557, 0.965415, 1, 1, 1, 0.533333, 1, 2.01166e-07, -2.38419e-07, 2.98023e-08, 0.378387, -0.055468, 0.0648019, 0.921709, 1, 1, 1, 0.63, 1, 6.70552e-08, 1.19209e-07, 7.45058e-09, 0.0773183, -0.0113341, 0.0132414, 0.996854, 1, 1, 1, 0.666667, 1, -6.33299e-08, -1.19209e-07, -5.96046e-08, 0.472619, -0.0692815, 0.08094, 0.874803, 1, 1, 1, 0.7, 1, 2.01166e-07, 5.96046e-08, 7.45058e-09, 0.0364633, -0.00534518, 0.00624462, 0.999301, 1, 1, 1, 0.733333, 1, 3.35276e-08, -5.96046e-08, 7.45058e-09, 0.501528, -0.0735193, 0.0858909, 0.857722, 1, 1, 1, 0.76, 1, -2.6077e-08, -1.78814e-07, 7.45058e-09, 0.0102799, -0.00150693, 0.00176051, 0.999945, 1, 1, 1, 0.8, 1, 5.58794e-08, 1.19209e-07, 6.70552e-08, 0.519861, -0.0762067, 0.0890305, 0.846174, 1, 1, 1, 0.83, 1, 1.00583e-07, -1.19209e-07, -2.98023e-08, -7.45058e-09, -5.58794e-09, -2.56114e-08, 1, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature/Skeleton:thumb_2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0.0666667, 1, 5.96046e-08, -5.96046e-08, -7.45058e-09, 0.00931593, -0.00554227, -0.000828029, 0.999941, 1, 1, 1, 0.133333, 1, 0, 0, 0, 0.0330603, -0.0196684, -0.00293855, 0.999256, 1, 1, 1, 0.2, 1, 0, 0, 0, 0.0701494, -0.0417335, -0.00623518, 0.996644, 1, 1, 1, 0.4, 1, 5.58794e-09, 1.19209e-07, 1.49012e-08, 0.231098, -0.137486, -0.020541, 0.962948, 1, 1, 1, 0.533333, 1, 6.14673e-08, -1.19209e-07, 0, 0.343638, -0.204438, -0.0305441, 0.91607, 1, 1, 1, 0.666667, 1, -1.86265e-09, 0, -2.98023e-08, 0.428632, -0.255003, -0.0380987, 0.865908, 1, 1, 1, 0.733333, 1, -3.91155e-08, 0, -1.49012e-08, 0.454574, -0.270437, -0.0404045, 0.847699, 1, 1, 1, 0.8, 1, -8.75443e-08, 0, -2.98023e-08, 0.468702, -0.278842, -0.0416603, 0.837156, 1, 1, 1, 0.83, 1, 6.70552e-08, 1.19209e-07, -3.72529e-09, 4.33681e-18, -1.86265e-09, -9.0804e-09, 1, 1, 1, 1, 0.833333, 1, 5.58794e-08, -1.19209e-07, -3.35276e-08, 0.47099, -0.280203, -0.0418636, 0.835406, 1, 1, 1 )
tracks/2/type = "transform"
tracks/2/path = NodePath("Armature/Skeleton:thumb_1")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = PoolRealArray( 0, 1, -2.98023e-08, -5.96046e-08, 1.86265e-09, -1.86264e-09, -9.31323e-10, -2.48838e-08, 1, 1, 1, 1, 0.0666667, 1, -2.98023e-08, -5.96046e-08, 1.86265e-09, 0.00455654, -0.00497692, -3.1442e-07, 0.999977, 1, 1, 1, 0.133333, 1, -2.98023e-08, -5.96046e-08, 1.86265e-09, 0.0160947, -0.0175796, -9.07599e-07, 0.999716, 1, 1, 1, 0.2, 1, -2.98023e-08, -5.96046e-08, 1.86265e-09, 0.0339338, -0.0370644, -1.92107e-06, 0.998737, 1, 1, 1, 0.466667, 1, -2.98023e-08, -5.96046e-08, 1.86265e-09, 0.138154, -0.1509, -7.45269e-06, 0.978848, 1, 1, 1, 0.666667, 1, -2.98023e-08, -5.96046e-08, 1.86265e-09, 0.20811, -0.227309, -1.11701e-05, 0.951326, 1, 1, 1, 0.733333, 1, -2.98023e-08, -5.96046e-08, 1.86265e-09, 0.221989, -0.242469, -1.19125e-05, 0.94442, 1, 1, 1, 0.8, 1, -2.98023e-08, -5.96046e-08, 1.86265e-09, 0.229696, -0.250888, -1.23104e-05, 0.94037, 1, 1, 1, 0.833333, 1, -2.98023e-08, -5.96046e-08, 1.86265e-09, 0.230956, -0.252264, -1.24025e-05, 0.939693, 1, 1, 1 )
tracks/3/type = "transform"
tracks/3/path = NodePath("Armature/Skeleton:base")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.833333, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )

[sub_resource type="Animation" id=2]
resource_name = "1"
length = 0.833333
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature/Skeleton:point_3")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, -1.49012e-08, 0, -1.86265e-09, -4.65661e-10, -9.31322e-10, -6.86668e-09, 1, 1, 1, 1, 0.0666667, 1, -2.23517e-08, 1.78814e-07, 4.65661e-10, 0.0165743, -0.000103748, -0.00082512, 0.999862, 1, 1, 1, 0.133333, 1, -3.72529e-08, -2.38419e-07, -2.37487e-08, 0.0595987, -0.00037306, -0.00296703, 0.998218, 1, 1, 1, 0.2, 1, 4.84288e-08, -5.96046e-08, 4.65661e-10, 0.128844, -0.000806508, -0.00641433, 0.991644, 1, 1, 1, 0.266667, 1, -3.72529e-08, 5.96046e-08, -7.12462e-08, 0.220802, -0.00138212, -0.0109923, 0.975256, 1, 1, 1, 0.333333, 1, -2.98023e-08, 0, 4.65661e-10, 0.328279, -0.00205487, -0.0163429, 0.944437, 1, 1, 1, 0.4, 1, -3.72529e-09, 0, 0, 0.443737, -0.00277759, -0.0220908, 0.895881, 1, 1, 1, 0.466667, 1, -2.23517e-08, -1.19209e-07, 0, 0.553935, -0.00346738, -0.0275769, 0.832096, 1, 1, 1, 0.533333, 1, -4.84288e-08, 0, 4.65661e-10, 0.649435, -0.00406516, -0.0323312, 0.759718, 1, 1, 1, 0.6, 1, 0, -1.19209e-07, 4.74975e-08, 0.724207, -0.00453319, -0.0360537, 0.688625, 1, 1, 1, 0.666667, 1, 0, -1.19209e-07, 0, 0.778713, -0.00487438, -0.0387672, 0.626162, 1, 1, 1, 0.733333, 1, 0, -1.19209e-07, -3.58559e-08, 0.812298, -0.00508461, -0.0404391, 0.581817, 1, 1, 1, 0.8, 1, -4.47035e-08, 0, -4.74975e-08, 0.829427, -0.00519182, -0.0412919, 0.557063, 1, 1, 1, 0.833333, 1, 0, 0, 0, 0.832114, -0.00520864, -0.0414257, 0.55303, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature/Skeleton:point_2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0, 1, 2.98023e-08, 2.38419e-07, -3.72529e-09, -4.10303e-18, 1.62981e-09, 4.24916e-09, 1, 1, 1, 1, 0.0666667, 1, 3.1665e-08, 5.96046e-08, -7.45058e-09, 0.0143751, 0.000625048, 0.00104289, 0.999896, 1, 1, 1, 0.133333, 1, 7.45058e-09, -1.19209e-07, 0, 0.0513637, 0.00223338, 0.00372638, 0.998671, 1, 1, 1, 0.2, 1, -1.67638e-08, 5.96046e-08, 0, 0.110032, 0.00478438, 0.00798271, 0.993885, 1, 1, 1, 0.333333, 1, 0, -4.76837e-07, 5.58794e-08, 0.275301, 0.0119705, 0.0199727, 0.961076, 1, 1, 1, 0.4, 1, -2.23517e-08, -5.96046e-08, 0, 0.370549, 0.016112, 0.0268829, 0.928284, 1, 1, 1, 0.466667, 1, -2.79397e-08, -5.96046e-08, -9.68575e-08, 0.463283, 0.0201443, 0.0336106, 0.885344, 1, 1, 1, 0.6, 1, -9.31323e-09, -1.19209e-07, -4.47035e-08, 0.615568, 0.0267659, 0.0446587, 0.786362, 1, 1, 1, 0.666667, 1, -5.96046e-08, 0, 0, 0.668598, 0.0290717, 0.048506, 0.74147, 1, 1, 1, 0.733333, 1, -4.09782e-08, 0, 0, 0.703037, 0.0305692, 0.0510045, 0.708663, 1, 1, 1, 0.8, 1, 0, 0, 0, 0.721211, 0.0313594, 0.052323, 0.690024, 1, 1, 1, 0.833333, 1, 0, 0, 0, 0.724109, 0.0314854, 0.0525333, 0.68696, 1, 1, 1 )
tracks/2/type = "transform"
tracks/2/path = NodePath("Armature/Skeleton:point_1")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = PoolRealArray( 0, 1, 0, 0, 1.49012e-08, 3.72529e-09, -3.29597e-17, -8.84756e-09, 1, 1, 1, 1, 0.0666667, 1, 0, 0, 1.49012e-08, 0.0134244, 0.000929445, -3.73739e-05, 0.999909, 1, 1, 1, 0.133333, 1, 0, 0, 1.49012e-08, 0.047861, 0.00331372, -0.000133191, 0.998848, 1, 1, 1, 0.2, 1, 0, 0, 1.49012e-08, 0.102209, 0.00707658, -0.0002844, 0.994738, 1, 1, 1, 0.333333, 1, 0, 0, 1.49012e-08, 0.254202, 0.0176, -0.000707307, 0.966991, 1, 1, 1, 0.466667, 1, 0, 0, 1.49012e-08, 0.427407, 0.029592, -0.00118922, 0.903574, 1, 1, 1, 0.6, 1, 0, 0, 1.49012e-08, 0.570904, 0.0395272, -0.0015885, 0.820063, 1, 1, 1, 0.666667, 1, 0, 0, 1.49012e-08, 0.622196, 0.0430785, -0.00173119, 0.781673, 1, 1, 1, 0.7, 1, 0, 0, 1.49012e-08, 0.656059, 0.0454231, -0.00182542, 0.753339, 1, 1, 1, 0.8, 1, 0, 0, 1.49012e-08, 0.674121, 0.0466736, -0.00187569, 0.737142, 1, 1, 1, 0.833333, 1, 0, 0, 1.49012e-08, 0.677016, 0.046874, -0.00188375, 0.734472, 1, 1, 1 )
tracks/3/type = "transform"
tracks/3/path = NodePath("Armature/Skeleton:base")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.833333, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )

[sub_resource type="Animation" id=3]
length = 0.833333
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature/Skeleton:middle_3")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, -2.38419e-07, -2.23517e-08, 7.45058e-09, 1.91358e-09, -1.58798e-09, 1, 1, 1, 1, 0.0666667, 1, 0, 2.38419e-07, 0, 0.0162316, 1.77029e-05, -0.00157375, 0.999867, 1, 1, 1, 0.133333, 1, 1.86265e-09, -2.98023e-07, 7.45058e-09, 0.0583091, 6.35998e-05, -0.00565342, 0.998283, 1, 1, 1, 0.2, 1, -1.86265e-09, 1.19209e-07, 7.45058e-09, 0.125876, 0.000137289, -0.0122044, 0.991971, 1, 1, 1, 0.266667, 1, -4.65661e-09, -1.19209e-07, 0, 0.215363, 0.000234886, -0.0208807, 0.976311, 1, 1, 1, 0.333333, 1, 1.49012e-08, -2.38419e-07, -1.04308e-07, 0.31978, 0.000348774, -0.0310045, 0.946985, 1, 1, 1, 0.4, 1, -8.3819e-09, 5.96046e-08, -2.38419e-07, 0.431948, 0.000471109, -0.0418799, 0.900926, 1, 1, 1, 0.466667, 1, -8.3819e-09, 5.96046e-08, 2.01166e-07, 0.539355, 0.000588255, -0.0522937, 0.840453, 1, 1, 1, 0.533333, 1, 1.86265e-09, 5.96046e-08, 1.49012e-08, 0.63302, 0.000690414, -0.0613751, 0.771698, 1, 1, 1, 0.6, 1, 1.02445e-08, 0, 0, 0.706991, 0.000771095, -0.068547, 0.703892, 1, 1, 1, 0.666667, 1, 0, 1.19209e-07, 7.45058e-09, 0.761416, 0.000830452, -0.0738238, 0.644046, 1, 1, 1, 0.733333, 1, -3.72529e-09, 0, 6.70552e-08, 0.795245, 0.000867364, -0.0771038, 0.601364, 1, 1, 1, 0.8, 1, 1.86265e-09, 1.19209e-07, -8.9407e-08, 0.812598, 0.000886285, -0.0787863, 0.577474, 1, 1, 1, 0.833333, 1, 7.45058e-09, 1.19209e-07, 7.45058e-09, 0.815328, 0.000889287, -0.079051, 0.573577, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature/Skeleton:middle_2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0, 1, 0, 0, 7.45058e-09, 0, 0, 6.54836e-10, 1, 1, 1, 1, 0.0666667, 1, 3.72529e-09, -1.19209e-07, 3.72529e-09, 0.0133234, -0.000519946, -0.00128317, 0.99991, 1, 1, 1, 0.133333, 1, 0, 3.57628e-07, 1.86265e-09, 0.047495, -0.00185349, -0.00457421, 0.998859, 1, 1, 1, 0.2, 1, 0, 0, 0, 0.101409, -0.00395748, -0.00976666, 0.994789, 1, 1, 1, 0.333333, 1, 7.45058e-09, -2.38419e-07, 1.86265e-09, 0.252125, -0.00983914, -0.024282, 0.96734, 1, 1, 1, 0.466667, 1, -1.11759e-08, 0, 1.86265e-09, 0.423893, -0.0165424, -0.0408249, 0.904641, 1, 1, 1, 0.6, 1, -7.45058e-09, 0, -6.89179e-08, 0.566383, -0.022103, -0.054548, 0.822038, 1, 1, 1, 0.666667, 1, 2.23517e-08, 0, -2.36556e-07, 0.617391, -0.0240936, -0.0594606, 0.784036, 1, 1, 1, 0.733333, 1, -1.11759e-08, -1.19209e-07, 0, 0.651098, -0.025409, -0.0627069, 0.755972, 1, 1, 1, 0.8, 1, -3.72529e-09, 0, 0, 0.669088, -0.0261111, -0.0644395, 0.739924, 1, 1, 1, 0.833333, 1, -2.6077e-08, -1.19209e-07, 1.86265e-09, 0.671972, -0.0262236, -0.0647172, 0.737277, 1, 1, 1 )
tracks/2/type = "transform"
tracks/2/path = NodePath("Armature/Skeleton:middle_1")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = PoolRealArray( 0, 1, 0, -1.19209e-07, 0, 1.11759e-08, 3.72529e-09, -4.65661e-10, 1, 1, 1, 1, 0.0666667, 1, 0, -1.19209e-07, 0, 0.0133269, 9.66582e-05, -0.00134786, 0.99991, 1, 1, 1, 0.133333, 1, 0, -1.19209e-07, 0, 0.0475071, 0.000344574, -0.0048048, 0.998859, 1, 1, 1, 0.2, 1, 0, -1.19209e-07, 0, 0.101435, 0.000735709, -0.010259, 0.994789, 1, 1, 1, 0.333333, 1, 0, -1.19209e-07, 0, 0.252189, 0.00182914, -0.0255061, 0.96734, 1, 1, 1, 0.466667, 1, 0, -1.19209e-07, 0, 0.424001, 0.00307528, -0.0428829, 0.904641, 1, 1, 1, 0.6, 1, 0, -1.19209e-07, 0, 0.566528, 0.00410902, -0.0572978, 0.822038, 1, 1, 1, 0.666667, 1, 0, -1.19209e-07, 0, 0.617549, 0.00447909, -0.062458, 0.784036, 1, 1, 1, 0.733333, 1, 0, -1.19209e-07, 0, 0.651265, 0.00472363, -0.0658679, 0.755972, 1, 1, 1, 0.8, 1, 0, -1.19209e-07, 0, 0.669259, 0.00485414, -0.0676879, 0.739924, 1, 1, 1, 0.833333, 1, 0, -1.19209e-07, 0, 0.672144, 0.00487506, -0.0679796, 0.737277, 1, 1, 1 )
tracks/3/type = "transform"
tracks/3/path = NodePath("Armature/Skeleton:ring_3")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = PoolRealArray( 0, 1, -1.44355e-08, 0, 3.72529e-09, 3.72529e-09, -1.39698e-09, 2.2992e-09, 1, 1, 1, 1, 0.0666667, 1, 4.65661e-10, 1.19209e-07, 1.86265e-08, 0.0167012, -0.00116134, -0.00146401, 0.999859, 1, 1, 1, 0.133333, 1, 8.84756e-09, 0, 3.53903e-08, 0.0601008, -0.00417919, -0.00526838, 0.99817, 1, 1, 1, 0.2, 1, -1.49012e-08, -1.78814e-07, 1.06171e-07, 0.130074, -0.00904484, -0.0114021, 0.991398, 1, 1, 1, 0.266667, 1, -1.11759e-08, 5.96046e-08, 1.43424e-07, 0.223192, -0.0155199, -0.0195648, 0.974455, 1, 1, 1, 0.333333, 1, 3.0268e-08, 0, 1.19209e-07, 0.332165, -0.0230975, -0.0291173, 0.942489, 1, 1, 1, 0.4, 1, 3.0268e-08, 1.19209e-07, 4.65661e-08, 0.449234, -0.031238, -0.0393795, 0.891999, 1, 1, 1, 0.466667, 1, -3.53903e-08, 0, 0, 0.560688, -0.0389881, -0.0491494, 0.825647, 1, 1, 1, 0.533333, 1, 1.21072e-08, 0, 0, 0.6568, -0.0456714, -0.0575745, 0.750475, 1, 1, 1, 0.6, 1, 4.65661e-10, -5.96046e-08, 7.07805e-08, 0.731542, -0.0508687, -0.0641263, 0.676866, 1, 1, 1, 0.666667, 1, 4.65661e-10, 1.19209e-07, 0, 0.785629, -0.0546297, -0.0688676, 0.612421, 1, 1, 1, 0.733333, 1, -3.53903e-08, 0, -1.11759e-08, 0.818726, -0.0569311, -0.0717688, 0.566829, 1, 1, 1, 0.8, 1, -1.21072e-08, 0, -1.11759e-08, 0.83553, -0.0580996, -0.0732419, 0.541432, 1, 1, 1, 0.833333, 1, -5.9139e-08, 1.19209e-07, -5.96046e-08, 0.838161, -0.0582826, -0.0734725, 0.5373, 1, 1, 1 )
tracks/4/type = "transform"
tracks/4/path = NodePath("Armature/Skeleton:ring_2")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = PoolRealArray( 0, 1, 1.49012e-08, 0, 0, 7.19978e-19, 3.95812e-09, 9.31323e-10, 1, 1, 1, 1, 0.0666667, 1, -4.17931e-08, -1.78814e-07, 0, 0.0133083, -0.00078825, -0.00130315, 0.99991, 1, 1, 1, 0.133333, 1, -2.09548e-08, 0, 3.72529e-09, 0.0474411, -0.00280994, -0.00464544, 0.998859, 1, 1, 1, 0.2, 1, -3.28291e-08, 0, 3.72529e-09, 0.101294, -0.00599965, -0.00991874, 0.994789, 1, 1, 1, 0.333333, 1, 2.96859e-08, 0, -5.96046e-08, 0.251839, -0.0149164, -0.0246601, 0.96734, 1, 1, 1, 0.466667, 1, 2.37487e-08, -5.96046e-08, 9.49949e-08, 0.423412, -0.0250787, -0.0414606, 0.904641, 1, 1, 1, 0.6, 1, 1.78115e-08, 0, -2.23517e-08, 0.56574, -0.0335088, -0.0553974, 0.822038, 1, 1, 1, 0.666667, 1, 5.94882e-08, 5.96046e-08, -1.19209e-07, 0.616691, -0.0365266, -0.0603865, 0.784036, 1, 1, 1, 0.733333, 1, -1.19908e-08, 0, 0, 0.650359, -0.0385208, -0.0636834, 0.755972, 1, 1, 1, 0.8, 1, 4.76139e-08, -5.96046e-08, 0, 0.668329, -0.0395851, -0.0654429, 0.739924, 1, 1, 1, 0.833333, 1, 0, 0, 0, 0.671209, -0.0397557, -0.065725, 0.737277, 1, 1, 1 )
tracks/5/type = "transform"
tracks/5/path = NodePath("Armature/Skeleton:ring_1")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = PoolRealArray( 0, 1, 2.98023e-08, 0, -3.72529e-09, 0, -9.08768e-28, 3.49246e-10, 1, 1, 1, 1, 0.0666667, 1, 2.98023e-08, 0, -3.72529e-09, 0.0133025, -0.000809478, -0.00134871, 0.99991, 1, 1, 1, 0.133333, 1, 2.98023e-08, 0, -3.72529e-09, 0.0474203, -0.00288558, -0.00480786, 0.998859, 1, 1, 1, 0.2, 1, 2.98023e-08, 0, -3.72529e-09, 0.10125, -0.00616118, -0.0102655, 0.994789, 1, 1, 1, 0.333333, 1, 2.98023e-08, 0, -3.72529e-09, 0.251729, -0.015318, -0.0255223, 0.96734, 1, 1, 1, 0.466667, 1, 2.98023e-08, 0, -3.72529e-09, 0.423227, -0.0257538, -0.0429102, 0.904641, 1, 1, 1, 0.6, 1, 2.98023e-08, 0, -3.72529e-09, 0.565493, -0.0344109, -0.0573343, 0.822038, 1, 1, 1, 0.666667, 1, 2.98023e-08, 0, -3.72529e-09, 0.616421, -0.0375099, -0.0624978, 0.784036, 1, 1, 1, 0.733333, 1, 2.98023e-08, 0, -3.72529e-09, 0.650075, -0.0395578, -0.06591, 0.755972, 1, 1, 1, 0.8, 1, 2.98023e-08, 0, -3.72529e-09, 0.668036, -0.0406508, -0.067731, 0.739924, 1, 1, 1, 0.833333, 1, 2.98023e-08, 0, -3.72529e-09, 0.670916, -0.040826, -0.068023, 0.737277, 1, 1, 1 )
tracks/6/type = "transform"
tracks/6/path = NodePath("Armature/Skeleton:pinky_3")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = PoolRealArray( 0, 1, 8.9407e-08, 0, -1.49012e-08, -3.72529e-09, 1.86264e-09, -4.94765e-09, 1, 1, 1, 1, 0.0666667, 1, -4.65661e-08, 0, 5.58794e-09, 0.0139425, 0.000229645, -0.001552, 0.999902, 1, 1, 1, 0.133333, 1, 8.3819e-08, 4.76837e-07, -3.53903e-08, 0.0497715, 0.000819784, -0.00554022, 0.998745, 1, 1, 1, 0.2, 1, -3.1665e-08, -2.98023e-07, 1.11759e-08, 0.10648, 0.00175383, -0.0118526, 0.994243, 1, 1, 1, 0.333333, 1, 6.14673e-08, 0, -1.19209e-07, 0.26573, 0.00437685, -0.0295792, 0.963584, 1, 1, 1, 0.4, 1, 2.42144e-08, 0, 0, 0.357458, 0.0058877, -0.0397897, 0.933063, 1, 1, 1, 0.466667, 1, 1.11759e-08, -5.96046e-08, -1.86265e-09, 0.447009, 0.00736271, -0.049758, 0.893114, 1, 1, 1, 0.6, 1, 2.6077e-08, -5.96046e-08, 0, 0.595292, 0.00980509, -0.0662638, 0.800712, 1, 1, 1, 0.666667, 1, 0, 0, 0, 0.647515, 0.0106653, -0.0720769, 0.758562, 1, 1, 1, 0.733333, 1, 3.72529e-08, -5.96046e-08, -3.1665e-08, 0.68167, 0.0112278, -0.0758788, 0.727627, 1, 1, 1, 0.8, 1, -8.19564e-08, 1.19209e-07, 0, 0.699778, 0.0115261, -0.0778945, 0.710007, 1, 1, 1, 0.833333, 1, 5.96046e-08, 1.19209e-07, -1.86265e-09, 0.702672, 0.0115738, -0.0782166, 0.707107, 1, 1, 1 )
tracks/7/type = "transform"
tracks/7/path = NodePath("Armature/Skeleton:pinky_2")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = PoolRealArray( 0, 1, -1.48721e-08, 2.38419e-07, -7.45058e-09, 0, -2.1684e-19, -1.49594e-08, 1, 1, 1, 1, 0.0666667, 1, 8.64384e-08, 0, 1.86265e-08, 0.0138483, -0.00130181, -0.00196879, 0.999901, 1, 1, 1, 0.133333, 1, 4.47035e-08, -1.78814e-07, -2.23517e-08, 0.0494369, -0.00464734, -0.00702833, 0.998742, 1, 1, 1, 0.2, 1, -1.22207e-07, 0, 4.84288e-08, 0.10577, -0.00994293, -0.015037, 0.994227, 1, 1, 1, 0.333333, 1, 5.96337e-08, -2.38419e-07, -1.19209e-07, 0.263987, -0.0248162, -0.0375304, 0.963476, 1, 1, 1, 0.4, 1, 5.99539e-09, 5.96046e-08, 2.23517e-08, 0.355122, -0.0333834, -0.0504869, 0.932858, 1, 1, 1, 0.466667, 1, -4.76721e-08, 1.78814e-07, 0, 0.444085, -0.0417464, -0.0631345, 0.892782, 1, 1, 1, 0.6, 1, 2.91038e-11, 2.98023e-08, -7.07805e-08, 0.591341, -0.0555893, -0.0840695, 0.800099, 1, 1, 1, 0.666667, 1, 0, 0, 0, 0.643177, -0.0604622, -0.091439, 0.75783, 1, 1, 1, 0.733333, 1, 0, 0, 0, 0.67707, -0.0636483, -0.0962574, 0.726815, 1, 1, 1, 0.8, 1, -8.34116e-08, -5.96046e-08, 9.68575e-08, 0.695035, -0.065337, -0.0988115, 0.70915, 1, 1, 1, 0.833333, 1, 5.96046e-08, 0, 0, 0.697906, -0.0656069, -0.0992196, 0.706243, 1, 1, 1 )
tracks/8/type = "transform"
tracks/8/path = NodePath("Armature/Skeleton:pinky_1")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = PoolRealArray( 0, 1, 6.70552e-08, -2.38419e-07, 0, 1.86265e-09, 7.45058e-09, -4.30737e-08, 1, 1, 1, 1, 0.0666667, 1, 0.00217987, -0.000789762, -0.000288829, 0.0133641, -0.00321284, -0.00320214, 0.9999, 1, 1, 1, 0.133333, 1, 0.00767935, -0.00278187, -0.00101751, 0.0477158, -0.0114713, -0.011433, 0.99873, 1, 1, 1, 0.2, 1, 0.016133, -0.005844, -0.00213762, 0.102109, -0.0245479, -0.0244658, 0.994169, 1, 1, 1, 0.333333, 1, 0.0389494, -0.0141087, -0.00516079, 0.254956, -0.0612934, -0.0610884, 0.963073, 1, 1, 1, 0.4, 1, 0.0520173, -0.0188422, -0.00689229, 0.343005, -0.0824612, -0.0821854, 0.932091, 1, 1, 1, 0.466667, 1, 0.0652181, -0.0236239, -0.00864139, 0.428918, -0.103115, -0.10277, 0.891535, 1, 1, 1, 0.6, 1, 0.0893955, -0.0323817, -0.0118449, 0.570937, -0.137258, -0.136799, 0.797795, 1, 1, 1, 0.666667, 1, 0.0991438, -0.0359128, -0.0131366, 0.620841, -0.149255, -0.148756, 0.755084, 1, 1, 1, 0.733333, 1, 0.106104, -0.0384338, -0.0140588, 0.653433, -0.157091, -0.156565, 0.723765, 1, 1, 1, 0.8, 1, 0.11001, -0.0398487, -0.0145763, 0.670695, -0.161241, -0.160701, 0.705935, 1, 1, 1, 0.833333, 1, 0.110652, -0.0400811, -0.0146613, 0.673453, -0.161904, -0.161362, 0.703001, 1, 1, 1 )
tracks/9/type = "transform"
tracks/9/path = NodePath("Armature/Skeleton:base")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.833333, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )

[node name="Gestures" type="Spatial"]
transform = Transform( 8.14603e-09, 0.05, -1.94707e-08, 0.05, -8.14603e-09, 1.0348e-20, -3.17217e-15, -1.94707e-08, -0.05, 0.0379551, -0.0422028, 0.0244641 )
script = ExtResource( 2 )

[node name="Inputs" type="Node" parent="."]

[node name="PointingTouchInput" type="Node" parent="Inputs"]
script = ExtResource( 1 )
pressed_action = "/actions/godot_ingame/in/touch_trigger"

[node name="GrabbingTouchInput" type="Node" parent="Inputs"]
script = ExtResource( 1 )
pressed_action = "/actions/godot_ingame/in/touch_grip"

[node name="ThumbTouchInput" type="Node" parent="Inputs"]
script = ExtResource( 1 )
pressed_action = "/actions/godot_ingame/in/touch_ax"

[node name="PointingPressInput" type="Node" parent="Inputs"]
script = ExtResource( 1 )
pressed_action = "/actions/godot_ingame/in/trigger"

[node name="GrabbingPressInput" type="Node" parent="Inputs"]
script = ExtResource( 1 )
pressed_action = "/actions/godot_ingame/in/grip"

[node name="ThumbPressInput" type="Node" parent="Inputs"]
script = ExtResource( 1 )
pressed_action = "/actions/godot_ingame/in/button_ax"

[node name="HandDefault" parent="." instance=ExtResource( 3 )]

[node name="Skeleton" parent="HandDefault/Armature" index="0"]
bones/15/rest = Transform( 0.995, 0.093, -0.032, -0.087, 0.983, 0.164, 0.047, -0.002, 0.986, 0, 0.645, 0 )

[node name="Hand" parent="HandDefault/Armature/Skeleton" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.35, 0, 0, 0 )

[node name="Index" type="BoneAttachment" parent="HandDefault/Armature/Skeleton" index="1"]
transform = Transform( 0.975734, 0.196838, -0.0959022, -0.196604, 0.98041, 0.0119764, 0.0963809, 0.00716901, 0.995319, 0.700328, 2.98927, 0.0458557 )
bone_name = "point_3"

[node name="GuiFinger" parent="HandDefault/Armature/Skeleton/Index" instance=ExtResource( 4 )]

[node name="Area" parent="HandDefault/Armature/Skeleton/Index/GuiFinger" index="0"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )

[node name="CollisionShape" parent="HandDefault/Armature/Skeleton/Index/GuiFinger/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.96046e-08, 0, -5.96046e-08 )

[node name="Middle" type="BoneAttachment" parent="HandDefault/Armature/Skeleton" index="2"]
transform = Transform( 0.995332, 0.00108562, -0.0965034, 0.00876084, 0.994792, 0.10155, 0.096111, -0.101921, 0.990139, 0.0819126, 3.26059, 0.0746803 )
bone_name = "middle_3"

[node name="Ring" type="BoneAttachment" parent="HandDefault/Armature/Skeleton" index="3"]
transform = Transform( 0.993798, -0.069105, -0.0871155, 0.0660753, 0.997121, -0.0371972, 0.0894351, 0.0312103, 0.995503, -0.365534, 3.01288, 0.0325711 )
bone_name = "ring_3"

[node name="Pinky" type="BoneAttachment" parent="HandDefault/Armature/Skeleton" index="4"]
transform = Transform( 0.953953, -0.291652, -0.0700865, 0.279839, 0.949468, -0.142126, 0.107996, 0.115969, 0.987364, -1.03916, 2.54156, 0.0419393 )
bone_name = "pinky_3"

[node name="Thumb" type="BoneAttachment" parent="HandDefault/Armature/Skeleton" index="5"]
transform = Transform( 0.648066, 0.743594, -0.0195462, -0.755588, 0.641447, 0.107047, 0.0943398, 0.102737, 0.99412, 1.41893, 1.36373, 0.085356 )
bone_name = "thumb_3"

[node name="AnimationPlayer" parent="HandDefault" index="1"]
anims/0 = SubResource( 1 )
anims/1 = SubResource( 2 )
anims/2 = SubResource( 3 )

[editable path="HandDefault"]
[editable path="HandDefault/Armature/Skeleton/Index/GuiFinger"]
